--- a/HJ1001/Views/MainWindow.xaml
+++ b/HJ1001/Views/MainWindow.xaml
@@ -41,42 +41,27 @@
 
 			<cvc:UpDirectionToSelectedIndexValueConverter x:Key="upDirectionToSelectedIndex" />
 
-			<Style x:Key="element" TargetType="FrameworkElement">
-				<Setter Property="Margin" Value="3" />
-			</Style>
-			<Style BasedOn="{StaticResource element}" TargetType="Label">
-				<Setter Property="Padding" Value="1" />
-				<Setter Property="HorizontalContentAlignment" Value="Right" />
-			</Style>
-			<Style BasedOn="{StaticResource element}" TargetType="TextBlock">
-				<Setter Property="HorizontalAlignment" Value="Right" />
-				<Setter Property="VerticalAlignment" Value="Center" />
-			</Style>
-			<Style BasedOn="{StaticResource element}" TargetType="TextBox">
-				<Setter Property="VerticalContentAlignment" Value="Center" />
-			</Style>
-			<Style BasedOn="{StaticResource element}" TargetType="ComboBox">
-			</Style>
-			<Style BasedOn="{StaticResource element}" TargetType="CheckBox">
-			</Style>
-			<Style BasedOn="{StaticResource element}" TargetType="uiCtrls:WpfFilterCheckBox">
-				<Setter Property="HorizontalAlignment" Value="Center" />
-				<Setter Property="VerticalAlignment" Value="Center" />
-			</Style>
-			<Style BasedOn="{StaticResource element}" TargetType="uiCtrls:WpfBoltCatalogStandard">
-				<Setter Property="VerticalContentAlignment" Value="Center" />
-			</Style>
-			<Style BasedOn="{StaticResource element}" TargetType="uiCtrls:WpfBoltCatalogSize">
-				<Setter Property="VerticalContentAlignment" Value="Center" />
-			</Style>
-			<Style BasedOn="{StaticResource element}" TargetType="uiCtrls:WpfMaterialCatalog">
-				<Setter Property="HorizontalAlignment" Value="Center" />
-				<Setter Property="VerticalAlignment" Value="Center" />
-			</Style>
+            <Style x:Key="element" TargetType="FrameworkElement">
+                <Setter Property="Margin" Value="2" />
+                <Setter Property="VerticalAlignment" Value="Center"/>
+            </Style>
+            <Style BasedOn="{StaticResource element}" TargetType="TextBlock">
+                <Setter Property="HorizontalAlignment" Value="Right" />
+            </Style>
+            <Style BasedOn="{StaticResource element}" TargetType="TextBox"/>
+            <Style BasedOn="{StaticResource element}" TargetType="ComboBox"/>
+            <Style BasedOn="{StaticResource element}" TargetType="CheckBox"/>
+            <Style BasedOn="{StaticResource element}" TargetType="uiCtrls:WpfFilterCheckBox">
+                <Setter Property="HorizontalAlignment" Value="Center" />
+            </Style>
+            <Style BasedOn="{StaticResource element}" TargetType="uiCtrls:WpfBoltCatalogStandard"/>
+            <Style BasedOn="{StaticResource element}" TargetType="uiCtrls:WpfBoltCatalogSize"/>
+            <Style BasedOn="{StaticResource element}" TargetType="uiCtrls:WpfMaterialCatalog">
+                <Setter Property="HorizontalAlignment" Value="Center" />
+            </Style>
 			<Style BasedOn="{StaticResource element}" TargetType="uiCtrls:WpfProfileCatalog">
-				<Setter Property="HorizontalAlignment" Value="Center" />
-				<Setter Property="VerticalAlignment" Value="Center" />
-			</Style>
+                <Setter Property="HorizontalAlignment" Value="Center" />
+            </Style>
 		</ResourceDictionary>
 	</Window.Resources>
 
@@ -204,15 +189,15 @@
 						<ColumnDefinition Width="30" />
 					</Grid.ColumnDefinitions>
 					<Grid.RowDefinitions>
-						<RowDefinition Height="30" />
-						<RowDefinition Height="30" />
-						<RowDefinition Height="30" />
-						<RowDefinition Height="30" />
-						<RowDefinition Height="30" />
-						<RowDefinition Height="30" />
-						<RowDefinition Height="30" />
-						<RowDefinition Height="30" />
-						<RowDefinition Height="30" />
+						<RowDefinition Height="auto" />
+						<RowDefinition Height="auto" />
+						<RowDefinition Height="auto" />
+						<RowDefinition Height="auto" />
+						<RowDefinition Height="auto" />
+						<RowDefinition Height="auto" />
+						<RowDefinition Height="auto" />
+						<RowDefinition Height="auto" />
+						<RowDefinition Height="auto" />
 					</Grid.RowDefinitions>
 
 					<TextBlock Grid.Row="0" Grid.Column="0" Text="{tsd:Loc albl_up_direction}" />
