--- a/MJ5001/MainWindow.xaml
+++ b/MJ5001/MainWindow.xaml
@@ -35,36 +35,24 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/MJ5001;component/Resources/BackgroundImage.xaml" />
-                <ResourceDictionary>
-                    <Style x:Key="element" TargetType="FrameworkElement">
-                        <Setter Property="Margin" Value="3" />
-                    </Style>
-                    <Style BasedOn="{StaticResource element}" TargetType="Label">
-                        <Setter Property="Padding" Value="1" />
-                        <Setter Property="HorizontalContentAlignment" Value="Right" />
-                    </Style>
-                    <Style BasedOn="{StaticResource element}" TargetType="TextBlock">
-                        <Setter Property="HorizontalAlignment" Value="Right" />
-                        <Setter Property="VerticalAlignment" Value="Center" />
-                    </Style>
-                    <Style BasedOn="{StaticResource element}" TargetType="TextBox">
-                        <Setter Property="VerticalContentAlignment" Value="Center" />
-                    </Style>
-                    <Style BasedOn="{StaticResource element}" TargetType="UIControls:WpfFilterCheckBox">
-                        <Setter Property="HorizontalAlignment" Value="Center" />
-                        <Setter Property="VerticalAlignment" Value="Center" />
-                    </Style>
-                    <Style BasedOn="{StaticResource element}" TargetType="UIControls:WpfBoltCatalogStandard">
-                        <Setter Property="VerticalContentAlignment" Value="Center" />
-                    </Style>
-                    <Style BasedOn="{StaticResource element}" TargetType="UIControls:WpfBoltCatalogSize">
-                        <Setter Property="VerticalContentAlignment" Value="Center" />
-                    </Style>
-                    <Style BasedOn="{StaticResource element}" TargetType="UIControls:WpfMaterialCatalog">
-                        <Setter Property="VerticalAlignment" Value="Center" />
-                    </Style>
-                </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
+
+            <Style x:Key="element" TargetType="FrameworkElement">
+                <Setter Property="Margin" Value="2" />
+                <Setter Property="VerticalAlignment" Value="Center" />
+            </Style>
+            <Style BasedOn="{StaticResource element}" TargetType="TextBlock">
+                <Setter Property="HorizontalAlignment" Value="Right" />
+            </Style>
+            <Style BasedOn="{StaticResource element}" TargetType="TextBox" />
+            <Style BasedOn="{StaticResource element}" TargetType="UIControls:WpfFilterCheckBox">
+                <Setter Property="HorizontalAlignment" Value="Center" />
+            </Style>
+            <Style BasedOn="{StaticResource element}" TargetType="UIControls:WpfBoltCatalogStandard" />
+            <Style BasedOn="{StaticResource element}" TargetType="UIControls:WpfBoltCatalogSize" />
+            <Style BasedOn="{StaticResource element}" TargetType="UIControls:WpfMaterialCatalog">
+                <Setter Property="HorizontalAlignment" Value="Center" />
+            </Style>
         </ResourceDictionary>
     </tsd:PluginWindowBase.Resources>
 
@@ -105,26 +93,26 @@
                 <ColumnDefinition Width="30" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
 
             <TextBlock Grid.Row="0" Grid.Column="0" Text="{tsd:Loc albl_gap}" />
