HJ1001, KJ1001, KJ2001, MG1001, MG1002, MJ5001, WK1001: 删除无用字段；命名空间调整；

--- a/KJ1001/Views/MainWindow.xaml
+++ b/KJ1001/Views/MainWindow.xaml
@@ -12,7 +12,7 @@
  *  MainWindow.xaml: user interface for the plugin KJ1001
  *  written by Huang YongXing - thinkerhua@hotmail.com
  *==============================================================================-->
-<tsd:PluginWindowBase x:Class="Muggle.TeklaPlugins.KJ1001.MainWindow"
+<tsd:PluginWindowBase x:Class="Muggle.TeklaPlugins.KJ1001.Views.MainWindow"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:uiCtrls="clr-namespace:Tekla.Structures.Dialog.UIControls;assembly=Tekla.Structures.Dialog"
