--- a/KJ2001/Views/MainWindow.xaml
+++ b/KJ2001/Views/MainWindow.xaml
@@ -12,7 +12,7 @@
  *  MainWindow.xaml: user interface for the plugin KJ2001
  *  written by Huang YongXing - thinkerhua@hotmail.com
  *==============================================================================-->
-<tsd:PluginWindowBase x:Class="Muggle.TeklaPlugins.KJ2001.View.MainWindow"
+<tsd:PluginWindowBase x:Class="Muggle.TeklaPlugins.KJ2001.Views.MainWindow"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:uiCtrls="clr-namespace:Tekla.Structures.Dialog.UIControls;assembly=Tekla.Structures.Dialog"
@@ -20,17 +20,17 @@
                       xmlns:local="clr-namespace:Muggle.TeklaPlugins.KJ2001"
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                       xmlns:tsd="clr-namespace:Tekla.Structures.Dialog;assembly=Tekla.Structures.Dialog"
-                      xmlns:viewModel="clr-namespace:Muggle.TeklaPlugins.KJ2001.ViewModel"
+                      xmlns:vm="clr-namespace:Muggle.TeklaPlugins.KJ2001.ViewModels"
                       xmlns:cvc="clr-namespace:Muggle.TeklaPlugins.Common.WPF.ValueConverters;assembly=Common.WPF"
                       Title="{tsd:Loc albl_KJ2001_title}"
                       ResizeMode="NoResize"
                       SizeToContent="WidthAndHeight"
                       mc:Ignorable="d">
     <d:UserControl.DataContext>
-        <viewModel:MainWindowViewModel />
+        <vm:MainWindowViewModel />
     </d:UserControl.DataContext>
     <tsd:PluginWindowBase.DataContext>
-        <viewModel:MainWindowViewModel />
+        <vm:MainWindowViewModel />
     </tsd:PluginWindowBase.DataContext>
     <tsd:PluginWindowBase.Resources>
         <ResourceDictionary>
