--- a/MJ5001/Views/MainWindow.xaml
+++ b/MJ5001/Views/MainWindow.xaml
@@ -12,13 +12,14 @@
  *  MainWindow.xaml: user interface for the plugin MJ5001
  *  written by Huang YongXing - thinkerhua@hotmail.com
  *==============================================================================-->
-<tsd:PluginWindowBase x:Class="Muggle.TeklaPlugins.MJ5001.MainWindow"
+<tsd:PluginWindowBase x:Class="Muggle.TeklaPlugins.MJ5001.Views.MainWindow"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:UIControls="clr-namespace:Tekla.Structures.Dialog.UIControls;assembly=Tekla.Structures.Dialog"
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                       xmlns:local="clr-namespace:Muggle.TeklaPlugins.MJ5001"
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                      xmlns:vm="clr-namespace:Muggle.TeklaPlugins.MJ5001.ViewModels"
                       xmlns:tsd="clr-namespace:Tekla.Structures.Dialog;assembly=Tekla.Structures.Dialog"
                       Title="{tsd:Loc albl_MJ5001_title}"
                       d:Width="800"
@@ -26,10 +27,10 @@
                       SizeToContent="WidthAndHeight"
                       mc:Ignorable="d">
     <d:UserControl.DataContext>
-        <local:MainWindowViewModel />
+        <vm:MainWindowViewModel />
     </d:UserControl.DataContext>
     <tsd:PluginWindowBase.DataContext>
-        <local:MainWindowViewModel />
+        <vm:MainWindowViewModel />
     </tsd:PluginWindowBase.DataContext>
     <tsd:PluginWindowBase.Resources>
         <ResourceDictionary>
