添加TSEP；主程序添加logo；

--- a/MainWindow/Views/MainWindow.xaml
+++ b/MainWindow/Views/MainWindow.xaml
@@ -30,6 +30,7 @@
                    ShowInTaskbar="True"
                    WindowStartupLocation="CenterScreen"
                    Background="#FFFFFFFF"
+                   Icon="/Resources/logo.ico"
                    mc:Ignorable="d">
 
     <dialog:WindowBase.Resources>
