--- a/MainWindow/App.xaml
+++ b/MainWindow/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:cvt="clr-namespace:Muggle.TeklaPlugins.MainWindow.Converters"
+             xmlns:cvc="clr-namespace:Muggle.TeklaPlugins.Common.WPF.ValueConverters;assembly=Common.WPF"
              xmlns:local="clr-namespace:Muggle.TeklaPlugins.MainWindow"
              xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2"
              xmlns:views="clr-namespace:Muggle.TeklaPlugins.MainWindow.Views"
@@ -17,7 +18,7 @@
                 <ResourceDictionary Source="/Styles/Uniform.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
-            <cvt:EnumToBoolValueConverter x:Key="enumToBool" />
+            <cvc:EnumToBoolValueConverter x:Key="enumToBool" />
             <cvt:MultiplesValueConverter x:Key="multiples" />
             <cvt:PluginNameToIconValueConverter x:Key="pluginNameToIcon" />
             <cvt:RoundDownValueConverter x:Key="roundDown" />
