--- a/MainWindow/Views/MainWindow.xaml
+++ b/MainWindow/Views/MainWindow.xaml
@@ -71,6 +71,11 @@
                                 <local:ThreeDimensionalRotation />
                             </RadioButton.CommandParameter>
                         </RadioButton>
+                        <RadioButton Content="MoveToElevation" GroupName="menuBtn" Command="{Binding NavigateCommand}">
+                            <RadioButton.CommandParameter>
+                                <local:MoveToElevation />
+                            </RadioButton.CommandParameter>
+                        </RadioButton>
                     </StackPanel>
                 </Expander>
                 <RadioButton Margin="4,8,4,0" Content="Plugins" GroupName="menuBtn" Command="{Binding NavigateCommand}">
